tests/baselines/reference/parserEnum4.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts(3,17): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts(4,9): error TS1132: Enum member expected.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum4.ts (2 errors) ====
    
    
        export enum SignatureFlags {
                    ~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
            ,
            ~
!!! error TS1132: Enum member expected.
        }